remove config options (add sane defaults / limits) and move channel configuration into the config file

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -15,9 +15,11 @@
     Verbose => 1,
   },
 
-  ContentCachePath => "/var/local/nonametv/contentcache/",
-  FileStore => "/var/local/nonametv/channels/",
-  LogFile => "/var/log/nonametv/nonametv.log",
+  ContentCachePath => '/var/local/nonametv/contentcache/',
+  FileStore => '/var/local/nonametv/channels/',
+  LogFile => '/var/log/nonametv/nonametv.log',
+
+# Channels: display_name, grabber_info, sched_lang, empty_ok, def_pty, def_cat, url, chgroup
  
   Importers =>
   {
@@ -25,15 +27,17 @@
     {
       Type => 'Arte',
       Channels => {
-	"arte.de" => [ "ARTE", "", "de", 0, ],
+	'arte.de' => [ 'ARTE', '', 'de', 0, undef, undef, 'http://www.arte.de/', 'TV' ],
       },
     },
     DasErsteDE =>
     {
       Type => 'DasErsteDE',
-      MaxDays => 6*7, # 6 Wochen (ab dem heutigen Tag)
       Username => 'see override.conf',
       Password => 'see override.conf',
+      Channels => {
+	'daserste.de' => [ 'Das Erste', '', 'de', 0, undef, undef, 'http://www.daserste.de/', 'TV' ],
+      },
     },
 
     DreiSat =>
@@ -41,33 +45,44 @@
       Type => 'DreiSat',
       MaxWeeks => 6,
       Channels => {
-	"3sat.de" => [ "3sat", "", "de", 0, ],
+	'3sat.de' => [ '3sat', '', 'de', 0, undef, undef, 'http://www.3sat.de/', 'TV' ],
       },
     },
 
     RadioSevenSE =>
     {
       Type => 'RadioSevenSE',
-      UrlRoot => 'http://www.radioseven.se/default.asp?page=tabla',
-      MaxDays => 7,
+      Channels => {
+        'radioseven.se' => [ 'radioseven.se', '', 'se', 0, undef, 'Music', 'http://www.radioseven.se/', 'RADIO' ],
+      },
     },
 
     RadioXDE =>
     {
       Type => 'RadioXDE',
-      UrlRoot => 'http://www.radiox.de/scripts/woche/woche_show_week.php',
+      Channels => {
+        'radiox.de' => [ 'RadioX', '', 'de', 0, undef, undef, 'http://www.radiox.de/', 'RADIO' ],
+      },
     },
 
     TechnoBaseFM =>
     {
       Type => 'TechnoBaseFM',
-      UrlRoot => 'http://www.technobase.fm/showplan.php',
-      MaxDays => 7,
+      Channels => {
+        'coretime.fm' => [ 'CoreTime.FM', '', 'de', 1, undef, 'Music', 'http://www.coretime.fm/', 'RADIO' ],
+        'hardbase.fm' => [ 'HardBase.FM', '', 'de', 1, undef, 'Music', 'http://www.hardbase.fm/', 'RADIO' ],
+        'housetime.fm' => [ 'HouseTime.FM', '', 'de', 1, undef, 'Music', 'http://www.housetime.fm/', 'RADIO' ],
+        'technobase.fm' => [ 'TechnoBase.FM', '', 'de', 1, undef, 'Music', 'http://www.technobase.fm/', 'RADIO' ],
+        'trancebase.fm' => [ 'TranceBase.FM', '', 'de', 1, undef, 'Music', 'http://www.trancebase.fm/', 'RADIO' ],
+      },
     },
 
     Tele5 =>
     {
       Type => 'Tele5',
+      Channels => {
+	'tele5.de' => [ 'Tele5', '', 'de', 0, undef, undef, 'http://www.tele5.de/', 'TV' ],
+      },
     },
 
     ZDF =>
@@ -75,7 +90,7 @@
       Type => 'ZDF',
       MaxWeeks => 6,
       Channels => {
-	"zdf.de" => [ "ZDF", "", "de", 0, ],
+	'zdf.de' => [ 'ZDF', '', 'de', 0, undef, undef, 'http://www.zdf.de/', 'TV'],
       },
     },
 
@@ -83,7 +98,7 @@
     {
       Type => 'ZDFinfo',
       Channels => {
-	"infokanal.zdf.de" => [ "ZDFinfo", "", "de", 0, ],
+	'infokanal.zdf.de' => [ 'ZDFinfokanal', '', 'de', 0, undef, undef, 'http://infokanal.zdf.de/', 'TV'],
       },
     },
 
@@ -92,7 +107,7 @@
       Type => 'ZDFneo',
       MaxWeeks => 5, # 6 actually, need to fix a bug with the sa-fr week
       Channels => {
-	"neo.zdf.de" => [ "ZDFneo", "", "de", 0, ],
+	'neo.zdf.de' => [ 'ZDFneo', '', 'de', 0, undef, undef, 'http://neo.zdf.de/', 'TV'],
       },
     },
 
@@ -122,7 +137,7 @@
                       # MinDays for a channel.
       MaxDays => 15,
       PastDays => 1,
-      Encoding => "ISO-8859-1",
+      Encoding => 'ISO-8859-1',
       Language => 'de',
       DtdFile => '/usr/share/sgml/xmltv/dtd/0.5/xmltv.dtd',
     },
