DRadioDE: new importer for Deutschlandfunk and Deutschlandradio Kultur

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -40,6 +40,15 @@
       },
     },
 
+    DRadioDE =>
+    {
+      Type => 'DRadioDE',
+      Channels => {
+	'dlf.dradio.de' => [ 'Deutschlandfunk', 'dlf', 'de', 0, undef, undef, 'http://www.dradio.de/dlf/', 'RADIO' ],
+	'dkultur.dradio.de' => [ 'Deutschlandradio Kultur', 'dkultur', 'de', 0, undef, undef, 'http://www.dradio.de/dkultur/', 'RADIO' ],
+      },
+    },
+
     DreiSat =>
     {
       Type => 'DreiSat',
