KiKaDE: new importer for KI.KA

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -58,6 +58,14 @@
       },
     },
 
+    KiKaDE =>
+    {
+      Type => 'KiKaDE',
+      Channels => {
+	'kika.de' => [ 'KI.KA', '', 'de', 0, undef, 'Kids', 'http://www.kika.de/', 'TV' ],
+      },
+    },
+
     RadioSevenSE =>
     {
       Type => 'RadioSevenSE',
