DRadioWissenDE: new importer for third channel of DRadio in another format...

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -49,6 +49,14 @@
       },
     },
 
+    DRadioWissenDE =>
+    {
+      Type => 'DRadioWissenDE',
+      Channels => {
+	'wissen.dradio.de' => [ 'Deutschlandradio Wissen', undef, 'de', 0, undef, undef, 'http://wissen.dradio.de/', 'RADIO' ],
+      },
+    },
+
     DreiSat =>
     {
       Type => 'DreiSat',
