german sample: prepare Eurosport

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -66,6 +66,17 @@
       },
     },
 
+    Eurosport => {
+      Type => 'Eurosport',
+      Filename => '2010_6Weeks_GERMAN.xml',
+      Channels => {
+	'eurosport.com' => 
+	    [ 'Eurosport', 'Eurosport', 'de', 0, 'sports', 'Sports', 'http://tv.eurosport.de/', 'TV' ],
+	'eurosport2.eurosport.com' => 
+	    [ 'Eurosport 2', 'Eurosport2', 'de', 0, 'sports', 'Sports', 'http://tv.eurosport.de/', 'TV' ],
+      },
+    },
+
     KiKaDE =>
     {
       Type => 'KiKaDE',
