Arte: split into common code, file reader and web reader

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -23,9 +23,9 @@
  
   Importers =>
   {
-    Arte =>
+    Arte_http =>
     {
-      Type => 'Arte',
+      Type => 'Arte_http',
       Channels => {
 	'arte.de' => [ 'ARTE', '', 'de', 0, undef, undef, 'http://www.arte.de/', 'TV' ],
       },
