switch germany over to utf-8 to test last commit (and get the euro sign etc.)

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -173,7 +173,7 @@
                       # MinDays for a channel.
       MaxDays => 15,
       PastDays => 1,
-      Encoding => 'ISO-8859-1',
+      Encoding => 'utf-8',
       Language => 'de',
       DtdFile => '/usr/share/sgml/xmltv/dtd/0.5/xmltv.dtd',
     },
