fix sample config to enable removal of old files

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -16,7 +16,8 @@
   },
 
   ContentCachePath => '/var/local/nonametv/contentcache/',
-  FileStore => '/var/local/nonametv/channels/',
+  # must not end in / or nonametv-filestore-moveold will die when creating "old" directory
+  FileStore => '/var/local/nonametv/channels',
   LogFile => '/var/log/nonametv/nonametv.log',
 
 # Channels: display_name, grabber_info, sched_lang, empty_ok, def_pty, def_cat, url, chgroup
