Viasat: correctly decode windows-125[02] characters

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -160,6 +160,21 @@
     {
       Type => 'TVGrabXX',
     },
+
+    # just for testing and bugfixing
+    Viasat =>
+    {
+      Type => 'Viasat',
+      MaxWeeks => 1,
+      Channels => {
+        # croatia
+	'action.tv1000.viasat.hr' => [ 'TV1000 Action (hrvatska)', 'tv1000_action_hr_', 'hr', 0, 'movie', 'Movies', undef, 'TEST'],
+        # denmark
+	'action.tv1000.viasat.dk' => [ 'TV1000 Action (danske)', 'tv1000_action_dk_', 'dk', 0, 'movie', 'Movies', undef, 'TEST'],
+        # sweden
+	'action.tv1000.viasat.se' => [ 'TV1000 Action (svenska)', 'tv1000_action_se_', 'sv', 0, 'movie', 'Movies', undef, 'TEST'],
+      },
+    },
   },
 
   Exporters =>
