update german sample config, add Downconverter, keep more Attributes
adds a new Importer "Downconverter" good for copying a HD channel to a SD channel, see sample config in examples/de/nonametv.conf
adjust german sample to installation inside home directory and add all channels to the sample config
extend NonameTV::ParseXmltv to import more of the data we just exported (for Combiner, Downconverter, Timeshifter, etc.) so the Downcoverter has something to drop
use search path to find wvHtml (change utf8 to utf-8 while here to make new host happy)

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -10,15 +10,15 @@
 
   Cache =>
   {
-    BasePath => '/var/local/nonametv/cache',  # Should be persistent between reboots.
+    BasePath => '/home/nonametv/var/cache',  # Should be persistent between reboots.
     MaxAge => 8*24, # Files are deleted from the cache after MaxAge hours.
     Verbose => 1,
   },
 
-  ContentCachePath => '/var/local/nonametv/contentcache/',
+  ContentCachePath => '/home/nonametv/var/contentcache/',
   # must not end in / or nonametv-filestore-moveold will die when creating "old" directory
-  FileStore => '/var/local/nonametv/channels',
-  LogFile => '/var/log/nonametv/nonametv.log',
+  FileStore => '/home/nonametv/var/channels',
+  LogFile => '/home/nonametv/var/nonametv.log',
 
 # Channels: display_name, grabber_info, sched_lang, empty_ok, def_pty, def_cat, url, chgroup
  
@@ -28,7 +28,7 @@
     {
       Type => 'Arte_http',
       Channels => {
-	'arte.de' => [ 'ARTE', '', 'de', 0, undef, undef, 'http://www.arte.de/', 'TV' ],
+	'hd.arte.de' => [ 'ARTE HD', '', 'de', 0, undef, undef, 'http://www.arte.de/', 'TV' ],
       },
     },
     DasErsteDE =>
@@ -37,7 +37,7 @@
       Username => 'see override.conf',
       Password => 'see override.conf',
       Channels => {
-	'daserste.de' => [ 'Das Erste', '', 'de', 0, undef, undef, 'http://www.daserste.de/', 'TV' ],
+	'hd.daserste.de' => [ 'Das Erste HD', '', 'de', 0, undef, undef, 'http://www.daserste.de/', 'TV' ],
       },
     },
 
@@ -127,7 +127,7 @@
       Type => 'ZDF',
       MaxWeeks => 6,
       Channels => {
-	'zdf.de' => [ 'ZDF', '', 'de', 0, undef, undef, 'http://www.zdf.de/', 'TV'],
+	'hd.zdf.de' => [ 'ZDF HD', '', 'de', 0, undef, undef, 'http://www.zdf.de/', 'TV'],
       },
     },
 
@@ -152,13 +152,33 @@
     {
       Type => 'Combiner',
       # same as Exporters->Xmltv->MaxDays
-      MaxDays => 15,
+      MaxDays => 3*7+1,
       UrlRoot => 'http://xmltv.spaetfruehstuecken.org/xmltv/',
+      Channels => {
+	'arteeinsextra.ard.de' => [ 'arte/EinsExtra', '', 'de', 0, undef, undef, undef, 'TV'],
+	'neokika.zdfmobil.de' => [ 'neo/KiKa', '', 'de', 0, undef, undef, undef, 'TV'],
+      },
+    },
+
+    Downconverter =>
+    {
+      Type => 'Downconverter',
+      # same as Exporters->Xmltv->MaxDays
+      MaxDays => 3*7+1,
+      UrlRoot => 'http://xmltv.spaetfruehstuecken.org/xmltv/',
+      Channels => {
+	'arte.de' => [ 'ARTE', 'hd.arte.de, quality', 'de', 0, undef, undef, 'http://www.arte.de', 'TV'],
+	'daserste.de' => [ 'Das Erste', 'hd.daserste.de, quality', 'de', 0, undef, undef, 'http://www.daserste.de', 'TV'],
+	'zdf.de' => [ 'ZDF', 'hd.zdf.de, quality', 'de', 0, undef, undef, 'http://www.zdf.de/', 'TV'],
+      },
     },
 
     TVGrabXX =>
     {
       Type => 'TVGrabXX',
+      Channels => {
+        'ok54.de' => [ 'OK54 B'.chr(252).'rgerrundfunk Trier', 'ok54;ok54.de', 'de', 0, undef, undef, 'http://ok54.de/', 'TV'],
+      },
     },
 
     # just for testing and bugfixing
@@ -171,6 +191,8 @@
 	'action.tv1000.viasat.hr' => [ 'TV1000 Action (hrvatska)', 'tv1000_action_hr_', 'hr', 0, 'movie', 'Movies', undef, 'TEST'],
         # denmark
 	'action.tv1000.viasat.dk' => [ 'TV1000 Action (danske)', 'tv1000_action_dk_', 'dk', 0, 'movie', 'Movies', undef, 'TEST'],
+        # norway
+	'action.tv1000.viasat.no' => [ 'TV1000 Action (norske)', 'tv1000_action_no_', 'no', 0, 'movie', 'Movies', undef, 'TEST'],
         # sweden
 	'action.tv1000.viasat.se' => [ 'TV1000 Action (svenska)', 'tv1000_action_se_', 'sv', 0, 'movie', 'Movies', undef, 'TEST'],
       },
@@ -182,24 +204,35 @@
     Xmltv => 
     {
       Type => 'Xmltv',
-      Root => '/var/local/nonametv/xmltv_staging/',
+      Root => '/home/nonametv/var/xmltv_staging/',
       RootUrl => 'http://xmltv.spaetfruehstuecken.org/xmltv/',
       IconRootUrl => 'http://xmltv.spaetfruehstuecken.org/chanlogos/',
       MinDays => 7,  # Warn if there is data for less than 
                       # MinDays for a channel.
-      MaxDays => 15,
+      MaxDays => 3*7+1,
       PastDays => 1,
       Encoding => 'utf-8',
       Language => 'de',
-      DtdFile => '/usr/share/sgml/xmltv/dtd/0.5/xmltv.dtd',
+      DtdFile => '/home/nonametv/nonametv/doc/dtd/xmltv/xmltv.dtd',
     },
     Conax =>
     {
       Type => 'Conax',
       Encoding => 'utf-8',
-      Root => '/var/local/nonametv/conax/',
+      Root => '/home/nonametv/var/conax/',
       Language => 'de',
       MaxDays => 14,
+    },
+  },
+
+  Upload => {
+    xmltv1 => {
+      Type => 'rsync',
+      Server => "ole.spaetfruehstuecken.org",
+      Paths => {
+        '/home/nonametv/var/xmltv/' => '/home/ispman/spaetfruehstuecken.org/vhosts/xmltv/htdocs/xmltv/',
+#       '/home/nonametv/var/json/' => '/home/ispman/spaetfruehstuecken.org/vhosts/xmltv/htdocs/json/',
+      },
     },
   },
 }
