german sample config: fix typo in Umlauts

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -177,7 +177,7 @@
     {
       Type => 'TVGrabXX',
       Channels => {
-        'ok54.de' => [ 'OK54 B'.chr(252).'rgerrundfunk Trier', 'ok54;ok54.de', 'de', 0, undef, undef, 'http://ok54.de/', 'TV'],
+        'ok54.de' => [ 'OK54 Buergerrundfunk Trier', 'ok54;ok54.de', 'de', 0, undef, undef, 'http://ok54.de/', 'TV'],
       },
     },
 
