DONT PUSH ME, collection of changes for initial augmenter

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -213,6 +213,17 @@
     },
   },
 
+  Augmenters =>
+  {
+    Tvdb => # might want multiple instances of the same type to handle multiple language setups
+    {
+      Type => 'Tvdb',
+      Language => 'de',              # main language used for initializing and languagestrings
+      Languages => ['de', 'en'],     # ordered list of languages to try to find synopsis in
+      ApiKey => 'see override.conf', # verify if it's per software or per installation
+    },
+  },
+
   Exporters =>
   {
     Xmltv => 
