Downconverter/Timeshifter: read directly from the database instead of exporting and reimporting
Add NonameTV::ParsePrograms to read one day of programmes from the
database with the same API as NonameTV::ParseXmltv.
Convert Downconverter and Timeshifter over to reading directly from
the database. Combiner is a bit more complex and needs some love anyway
so leave it for later.

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -197,6 +197,15 @@
 	'action.tv1000.viasat.se' => [ 'TV1000 Action (svenska)', 'tv1000_action_se_', 'sv', 0, 'movie', 'Movies', undef, 'TEST'],
       },
     },
+
+    Timeshifter =>
+    {
+      Type => 'Timeshifter',
+      MaxDays => 3,
+      Channels => {
+        'plus1.action.tv1000.viasat.hr' => [ 'timeshifted TV1000 Action hr', 'action.tv1000.viasat.hr, 60', 'hr', 0, undef, undef, undef, 'TEST'],
+      },
+    },
   },
 
   Exporters =>
