Tele5, SWR*: extend Tele5 to support SWR/ARD channels and make use of them
rework loop to handle last programme of each batch
parse audio quality

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -118,7 +118,12 @@
     {
       Type => 'Tele5',
       Channels => {
-	'tele5.de' => [ 'Tele5', '', 'de', 0, undef, undef, 'http://www.tele5.de/', 'TV' ],
+	'tele5.de' => [ 'Tele5', 'Tele 5', 'de', 0, undef, undef, 'http://www.tele5.de/', 'TV' ],
+        'swr3.de' => [ 'SWR 3', 'SWR 3', 'de', 0, 'tvshow', 'Music', 'http://www.swr3.de/', 'RADIO' ],
+        'bw.swr.de' => [ 'SWR Fernsehen BW', 'SWR, BW', 'de', 0, undef, undef, 'http://www.swr.de/tv', 'TV' ],
+        'rp.swr.de' => [ 'SWR Fernsehen RP', 'SWR, RP', 'de', 0, undef, undef, 'http://www.swr.de/tv', 'TV' ],
+        'sr.swr.de' => [ 'SWR Fernsehen SR', 'SWR, SR', 'de', 0, undef, undef, 'http://www.swr.de/tv', 'TV' ],
+        'eins-extra.ard.de' => [ 'EinsExtra', 'EinsExtra', 'de', 0, undef, undef, 'http://www.eins-extra.de/', 'TV' ],
       },
     },
 
