german config: correct names for SR FS

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -122,7 +122,7 @@
         'swr3.de' => [ 'SWR 3', 'SWR 3', 'de', 0, 'tvshow', 'Music', 'http://www.swr3.de/', 'RADIO' ],
         'bw.swr.de' => [ 'SWR Fernsehen BW', 'SWR, BW', 'de', 0, undef, undef, 'http://www.swr.de/tv', 'TV' ],
         'rp.swr.de' => [ 'SWR Fernsehen RP', 'SWR, RP', 'de', 0, undef, undef, 'http://www.swr.de/tv', 'TV' ],
-        'sr.swr.de' => [ 'SWR Fernsehen SR', 'SWR, SR', 'de', 0, undef, undef, 'http://www.swr.de/tv', 'TV' ],
+        'sr.swr.de' => [ 'SR Fernsehen', 'SWR, SR', 'de', 0, undef, undef, 'http://www.sr-online.de/fernsehen/', 'TV' ],
         'eins-extra.ard.de' => [ 'EinsExtra', 'EinsExtra', 'de', 0, undef, undef, 'http://www.eins-extra.de/', 'TV' ],
       },
     },
