--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -120,8 +120,8 @@
       Channels => {
 	'tele5.de' => [ 'Tele5', 'Tele 5', 'de', 0, undef, undef, 'http://www.tele5.de/', 'TV' ],
         'swr3.de' => [ 'SWR 3', 'SWR 3', 'de', 0, 'tvshow', 'Music', 'http://www.swr3.de/', 'RADIO' ],
-        'bw.swr.de' => [ 'SWR Fernsehen BW', 'SWR, BW', 'de', 0, undef, undef, 'http://www.swr.de/tv', 'TV' ],
-        'rp.swr.de' => [ 'SWR Fernsehen RP', 'SWR, RP', 'de', 0, undef, undef, 'http://www.swr.de/tv', 'TV' ],
+        'bw.swr.de' => [ 'SWR Fernsehen BW', 'SWR, BW', 'de', 0, undef, undef, 'http://www.swr.de/tv/bw/', 'TV' ],
+        'rp.swr.de' => [ 'SWR Fernsehen RP', 'SWR, RP', 'de', 0, undef, undef, 'http://www.swr.de/tv/rp/', 'TV' ],
         'sr.swr.de' => [ 'SR Fernsehen', 'SWR, SR', 'de', 0, undef, undef, 'http://www.sr-online.de/fernsehen/', 'TV' ],
         'eins-extra.ard.de' => [ 'EinsExtra', 'EinsExtra', 'de', 0, undef, undef, 'http://www.eins-extra.de/', 'TV' ],
       },
