german config: add more channels from SWR

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -124,6 +124,16 @@
         'rp.swr.de' => [ 'SWR Fernsehen RP', 'SWR, RP', 'de', 0, undef, undef, 'http://www.swr.de/tv/rp/', 'TV' ],
         'sr.swr.de' => [ 'SR Fernsehen', 'SWR, SR', 'de', 0, undef, undef, 'http://www.sr-online.de/fernsehen/', 'TV' ],
         'eins-extra.ard.de' => [ 'EinsExtra', 'EinsExtra', 'de', 0, undef, undef, 'http://www.eins-extra.de/', 'TV' ],
+        'einsplus.ard.de' => [ 'EinsPlus', 'EinsPlus', 'de', 0, undef, undef, 'http://www.einsplus.de/', 'TV' ],
+        'hd.einsfestival.ard.de' => [ 'Einsfestival HD', 'EinsFestival', 'de', 0, undef, undef, 'http://www.einsfestival.de/was_ist_einsfestival/hdtv_in_einsfestival.jsp', 'TV' ],
+        'bw.swr1.swr.de' => [ 'SWR 1 BW', 'SWR 1 BW', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
+        'rp.swr1.swr.de' => [ 'SWR 1 RP', 'SWR 1 RP', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
+        'bw.swr2.swr.de' => [ 'SWR 2 BW', 'SWR 2 BW', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
+        'rp.swr2.swr.de' => [ 'SWR 2 RP', 'SWR 2 RP', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
+        'bw.swr4.swr.de' => [ 'SWR 4 BW', 'SWR 4 BW', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
+        'rp.swr4.swr.de' => [ 'SWR 4 RP', 'SWR 4 RP', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
+        'contra.swr.de'  => [ 'cont.ra',  'cont.ra',  'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
+        'dasding.swr.de' => [ 'Das Ding', 'Das Ding', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
       },
     },
 
@@ -173,6 +183,7 @@
       Channels => {
 	'arte.de' => [ 'ARTE', 'hd.arte.de, quality', 'de', 0, undef, undef, 'http://www.arte.de', 'TV'],
 	'daserste.de' => [ 'Das Erste', 'hd.daserste.de, quality', 'de', 0, undef, undef, 'http://www.daserste.de', 'TV'],
+	'einsfestival.ard.de' => [ 'Einsfestival', 'hd.einsfestival.ard.de, quality', 'de', 0, undef, undef, 'http://www.einsfestival.de/', 'TV'],
 	'zdf.de' => [ 'ZDF', 'hd.zdf.de, quality', 'de', 0, undef, undef, 'http://www.zdf.de/', 'TV'],
       },
     },
