ZDFkultur: new channel, derived from ZDFneo

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -154,6 +154,16 @@
       },
     },
 
+    ZDFkultur =>
+    {
+      Type => 'ZDFkultur',
+      MaxWeeks => 5, # 6 actually, need to fix a bug with the sa-fr week
+      Channels => {
+	'kultur.zdf.de' => [ 'ZDFkultur', '', 'de', 0, undef, undef, 'http://kultur.zdf.de/', 'TV'],
+      },
+    },
+
+
     ZDFneo =>
     {
       Type => 'ZDFneo',
