german config: cut down to 3+1 weeks on Arte

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -30,6 +30,7 @@
       Channels => {
 	'hd.arte.de' => [ 'ARTE HD', '', 'de', 0, undef, undef, 'http://www.arte.de/', 'TV' ],
       },
+      MaxWeeks => 3,
     },
     DasErsteDE =>
     {
