Augmenters: flesh out framework and convert hard coded example into real prototype

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -243,6 +243,16 @@
       Languages => ['de', 'en'],     # ordered list of languages to try to find synopsis in
       ApiKey => 'see override.conf', # verify if it's per software or per installation
     },
+
+    Tmdb =>
+    {
+      Type => 'Tmdb',
+    },
+
+    Fixups =>
+    {
+      Type => 'Fixups',
+    },
   },
 
   Exporters =>
