Added some example importers and removed old-non-working importers.

--- a/examples/se/nonametv.conf
+++ b/examples/se/nonametv.conf
@@ -153,77 +153,69 @@ use utf8;
 	    [ "CANAL+ Hits", "11", "sv", 0, "movie", "Movies", ],
 	"action.canalplus.se" => 
             [ "CANAL+ Action", "5", "sv", 0, "movie", "Movies", ],
-	"drama.canalplus.se" => 
-	    [ "CANAL+ Drama", "9", "sv", 0, ],
-	"hits-sport-weekend.canalplus.se" => 
-	    [ "CANAL+ Hits Sport Weekend", "14", "sv", 0, "", "", "", "" ],
+	"emotion.canalplus.se" => 
+	    [ "CANAL+ Emotion", "9", "sv", 0, ],
+	"series.canalplus.se" => 
+	    [ "CANAL+ Series", "17", "sv", 0, "series", "Series", ],
 	"filmhd.canalplus.se" => 
             [ "CANAL+ Film HD", "13", "sv", 0, "movie", "Movies", ],
-	"sporthd.canalplus.se" => 
-	    [ "CANAL+ Sport HD", "35", "sv", 0, "sports", "Sports", ],
+	"sporthd.canalplus.se" =>
+            [ "CANAL+ Sport HD", "35", "sv", 0, "sports", "Sports", ],
+        "family.canalplus.se" =>
+            [ "CANAL+ Family", "57", "sv", 0, "series", "Children's", ],
+
+
 	"sport-extra.canalplus.se" => 
             [ "CANAL+ Sport Extra", "18", "sv", 0, "sports", "Sports", ],
-	"comedy.canalplus.se" => 
-            [ "CANAL+ Comedy", "17", "sv", 0, "movie", "Movies", ],
 	"sf.canalplus.se" => 
             [ "SF-kanalen", "37", "sv", 0, "movie", "Movies", ],
 	"sport1sf.canalplus.se" => 
-            [ "Canal+ Sport1/SF", "38", "sv", 0 ],
-	"ppv1.canalplus.se" => [ "Canal+ PPV1", "20&g=2", "", 0, ],
-	"ppv2.canalplus.se" => [ "Canal+ PPV2", "21&g=2", "", 0, ],
-	"ppv3.canalplus.se" => [ "Canal+ PPV3", "22&g=2", "", 0, ],
-	"ppv4.canalplus.se" => [ "Canal+ PPV4", "23&g=2", "", 0, ],
-	"ppv5.canalplus.se" => [ "Canal+ PPV5", "24&g=2", "", 0, ],
-	"ppv6.canalplus.se" => [ "Canal+ PPV6", "28&g=2", "", 0, ],
-	"ppv7.canalplus.se" => [ "Canal+ PPV7", "29&g=2", "", 0, ],
-	"ppv8.canalplus.se" => [ "Canal+ PPV8", "30&g=2", "", 0, ],
+            [ "CANAL+ Sport1/SF", "38", "sv", 0 ],
+        "hd.canalplus.se" =>
+            [ "CANAL+ HD (Boxer)", "100", "sv", 0 ],
+        "hits-boxer.canalplus.se" =>
+            [ "CANAL+ Hits (Boxer)", "14", "sv", 0 ],
+
+	"extra1.canalplus.se" =>
+            [ "CANAL+ Extra 1", "50", "sv", 0, "sports", "Sports", ],
+        "extra2.canalplus.se" =>
+            [ "CANAL+ Extra 2", "51", "sv", 0, "sports", "Sports", ],
+        "extra3.canalplus.se" =>
+            [ "CANAL+ Extra 3", "52", "sv", 0, "sports", "Sports", ],
+        "extra4.canalplus.se" =>
+            [ "CANAL+ Extra 4", "53", "sv", 0, "sports", "Sports", ],
+
+        "k2.canalplus.se" => [ "CANAL+ K2", "20&g=2", "", 0, ],
+        "k3.canalplus.se" => [ "CANAL+ K3", "21&g=2", "", 0, ],
+        "k4.canalplus.se" => [ "CANAL+ K4", "22&g=2", "", 0, ],
+        "k5.canalplus.se" => [ "CANAL+ K5", "23&g=2", "", 0, ],
+        "k6.canalplus.se" => [ "CANAL+ K6", "24&g=2", "", 0, ],
+        "k10.canalplus.se" => [ "CANAL+ K10", "28&g=2", "", 0, ],
+        "k11.canalplus.se" => [ "CANAL+ K11", "29&g=2", "", 0, ],
+        "k12.canalplus.se" => [ "CANAL+ K12", "30&g=2", "", 0, ],
       },
     },
 
-    CanalPlusPPV => {
-      Type => 'CanalPlusPPV',
-      UrlRoot => 'http://grids.canalplus.se/services/ppvschedule.aspx?',
-      MaxWeeks => 3,
-      ProgramLength => 3,
+    NonstopWeekly => {
+      Type => 'NonstopWeb_Weekly',
+      UrlRoot => '<URLROOT>',
+      MinWeeks => 1,
+      MaxWeeks => 4,
       Channels => {
-	"ppvsport1.canalplus.se" => 
-	    [ "Canal+ PPV Sport 1", "PPV Sport 1", "", 0, ],
-	"ppvsport2.canalplus.se" => 
-	    [ "Canal+ PPV Sport 2", "PPV Sport 2", "", 0, ],
-	"ppvsport3.canalplus.se" => 
-	    [ "Canal+ PPV Sport 3", "PPV Sport 3", "", 0, ],
-	"ppvsport4.canalplus.se" => 
-	    [ "Canal+ PPV Sport 4", "PPV Sport 4", "", 0, ],
-	"ppvsport5.canalplus.se" => 
-	    [ "Canal+ PPV Sport 5", "PPV Sport 5", "", 0, ],
-      },
-    },
-
-    Combiner => {
-      Type => 'Combiner',
-      UrlRoot => 'http://converter.xmltv.se/xmltv/',
-      MaxDays => 15,
-      Channels => {
-	"svtb-svt24.svt.se" => 
-	    [ "SVTB/SVT24", "", "sv", 0, ],
-	"viasat-nature-nick.spa.se" => 
-	    [ "Nature/Crime/Nickelodeon", "", "sv", 0, ],
+       "star.nonstop.tv" => [ "Star!", "star/se/eng", "en", 0, ],
+       "showtime.nonstop.tv" => [ "Showtime", "showtime/se/swe", "sv", 0,  "movie", "Movies" ],
+       "silver.nonstop.tv" => [ "Silver", "silver-1/se/swe", "sv", 0,  "movie", "Movies" ],
+       "silverhd.nonstop.tv" => [ "Silver HD", "silver-hd/swe", "sv", 0,  "movie", "Movies" ],
       },
     },
 
     Nonstop => {
       Type => 'NonstopWeb',
-      MaxDays => 15,
+      UrlRoot => '<URLROOT>',
+      MinMonths => 1,
+      MaxMonths => 2,
       Channels => {
-#	"showtime.nonstop.tv" => 
-#	    [ "Showtime", "scheduels_showtime.asp", "en", 0, ],
-#	"silver.nonstop.tv" => 
-#	    [ "Silver", "scheduels_silver.asp", "en", 0, ],
-#	"star.nonstop.tv" => 
-#	    [ "Star!", "scheduels_star.asp", "en", 0, ],
-	"tv7.nu" => [ "TV7", 'http://www.tv7.nu/index.php/tabla/%Y/%m/%d',
-		      "sv", 0 ],
-
+	"tnt7.se" => [ "TNT7", 'tnt7/swe', "sv", 0 ],
       },
     },
 
@@ -241,15 +233,6 @@ use utf8;
       },
     },
 
-    NASN => {
-      Type => 'NASN',
-      UrlRoot => 'http://www.nasn.com/content/nasn/portal.nsf/systemcontent/tvschedule?open&region=se&dateadjust=',
-      MaxDays => 14,
-      Channels => {
-	"se.nasn.com" => [ "NASN", "", "en", 0, "sports", "Sports", ],
-      },
-    },
-
     SverigesRadio => {
       Type => 'SverigesRadio',
       UrlRoot => 'http://www.sr.se/xmltv/sr_',
@@ -261,12 +244,6 @@ use utf8;
       },
     },
 
-    KanalLokal => {
-       Type => 'KanalLokal',
-       Channels => {
-       },
-    },
-
     Mtve => {
       Type => 'Mtve',
       MaxDays => 16,
@@ -275,7 +252,12 @@ use utf8;
 	"vh1.com" => [ "VH1", "1:3:0", "en", 0, ],
 	"nickelodeon.se" => [ "Nickelodeon", "1:4:0", "sv", 0, 
 	                      "", "Children's", ],
-	"mtv2.mtve.com" => [ "MTV2", "1:2:0", "en", 0, ],
+
+	"jr.nickelodeon.se" => [ "Nick. Jr", "1:9:0", "sv", 0, 
+	                      "", "Children's", ],
+	"rocks.mtve.com" => [ "MTV Rocks", "1:2:0", "en", 0, ],
+	"hits.mtve.com" => [ "MTV Hits", "1:8:0", "en", 0, ],
+
 	"se.comedycentral.tv" => [ "Comedy Central", "1:6:0", "sv", 0, ],
 	"hd.mtve.com" => [ "MTVNHD", "3:2:1", "en", 0, ],
       },
@@ -300,35 +282,80 @@ use utf8;
 	    [ "Discovery Channel", "DCSWE", "sv", 0, ],
 	"nordic.animalplanet.discovery.com" => 
 	    [ "Animal Planet", "APSWE", "sv", 0, ],
-	"nordic.travel.discovery.com" => 
-	    [ "Discovery Travel & Living", "TLSWE", "sv", 0, ],
 	"nordic.science.discovery.com" => 
 	    [ "Discovery Science", "SCSWE", "sv", 0, ],
-	"hd.discovery.com" => 
-	    [ "Discovery HD", "HDSWE", "sv", 0, ],
+	"hdshowcase.discovery.com" => 
+	    [ "Discovery HD Showcase", "HDSWE", "sv", 0, ],
 	"world.discovery.com" => 
 	    [ "Discovery World", "DWSWE", "sv", 0, ],
+	"tlc.discovery.com" => 
+	    [ "TLC", "TLCSWE", "sv", 0, ],
+	"hd.animalplanet.discovery.com" => 
+	    [ "Animal Planet HD", "AHSWE", "sv", 0, ],
+	"investigation.discovery.com" => 
+	    [ "Investigation Discovery", "IDSWE", "sv", 0, ],
       },
     },
 
     DR => {
-      Type => 'DR',
-      UrlRoot => 'http://converter.xmltv.se/proxy/DR/',
-      MaxWeeks => 3,
-      Channels => {
-	"dr1.dr.dk" => [ "DR1", "DR1", "", 0, ],
-	"dr2.dr.dk" => [ "DR2", "DR2", "", 0, ],
-      },
-    },
+     Type => 'DR_xml',
+     UrlRoot => '<URLROOT>',
+     MaxDays => 12,
+     Channels => {
+	"dr1.dr.dk" => [ "DR1", "DR1", "dk", 0, ],
+	"dr2.dr.dk" => [ "DR2", "DR2", "dk", 0, ],
+	"hd.dr.dk" => [ "DR HD", "DRHD", "dk", 0, ],
+     },
+   },
 
     Eurosport => {
       Type => "Eurosport",
-      Filename => '2010_6Weeks_SWEDISH.xml',
+      Filename => '2011_6Weeks_SWEDISH.xml',
       Channels => {
 	"eurosport.com" => 
 	    [ "Eurosport", "EurosportNordic", "sv", 0, "sports", "Sports", ],
 	"eurosport2.eurosport.com" => 
 	    [ "Eurosport 2", "Eurosport2NE", "sv", 0, "sports", "Sports", ],
+      },
+    },
+
+    OUTTV => {
+      Type => 'OUTTV',
+      Channels => {
+        "outtv.se" =>
+            [ "OUTTV", "", "sv", 0, ],
+      },
+    },
+
+    YaS => {
+      Type => 'YaS',
+      Channels => {
+        "europe.yachtandsail.com" =>
+            [ "Yacht & Sail", "", "en", 0, ],
+      },
+    },
+
+    ExtremeSports => {
+      Type => 'ExtremeSports_v2',
+      Channels => {
+        "extremesports.com" =>
+            [ "Extreme Sports", "", "en", 0, "sport", "sports" ],
+      },
+    },
+
+    NatGeoWild => {
+      Type => 'NatGeoWild',
+      Channels => {
+        "wild.ngcsverige.com" =>
+            [ "National Geographic Wild", "", "sv", 0, ],
+      },
+    },
+
+    NatGeoWildHD => {
+      Type => 'NGC',
+      Channels => {
+        "wildhd.ngcsverige.com" =>
+            [ "Nat. Geo. Wild HD", "", "en", 0, ],
       },
     },
 
