--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -87,6 +87,16 @@
       },
     },
 
+    ORF =>
+    {
+      Type => 'ORF_xml',
+      Channels => {
+	'hd.orf1.orf.at' => [ 'ORFeins HD', 'ORF1', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+	'hd.orf2.orf.at' => [ 'ORF 2 HD', 'ORF2', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+	'sportplus.orf.at' => [ 'ORF Sport Plus', 'ORFS', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+      },
+    },
+
     RadioSevenSE =>
     {
       Type => 'RadioSevenSE',
@@ -194,6 +204,8 @@
 	'arte.de' => [ 'ARTE', 'hd.arte.de, quality', 'de', 0, undef, undef, 'http://www.arte.de', 'TV'],
 	'daserste.de' => [ 'Das Erste', 'hd.daserste.de, quality', 'de', 0, undef, undef, 'http://www.daserste.de', 'TV'],
 	'einsfestival.ard.de' => [ 'Einsfestival', 'hd.einsfestival.ard.de, quality', 'de', 0, undef, undef, 'http://www.einsfestival.de/', 'TV'],
+	'orf1.orf.at' => [ 'ORFeins', 'hd.orf1.org.at', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+	'orf2.orf.at' => [ 'ORF 2', 'hd.orf2.orf.at', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'zdf.de' => [ 'ZDF', 'hd.zdf.de, quality', 'de', 0, undef, undef, 'http://www.zdf.de/', 'TV'],
       },
     },
