--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -204,7 +204,7 @@
 	'arte.de' => [ 'ARTE', 'hd.arte.de, quality', 'de', 0, undef, undef, 'http://www.arte.de', 'TV'],
 	'daserste.de' => [ 'Das Erste', 'hd.daserste.de, quality', 'de', 0, undef, undef, 'http://www.daserste.de', 'TV'],
 	'einsfestival.ard.de' => [ 'Einsfestival', 'hd.einsfestival.ard.de, quality', 'de', 0, undef, undef, 'http://www.einsfestival.de/', 'TV'],
-	'orf1.orf.at' => [ 'ORFeins', 'hd.orf1.org.at', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+	'orf1.orf.at' => [ 'ORFeins', 'hd.orf1.orf.at', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'orf2.orf.at' => [ 'ORF 2', 'hd.orf2.orf.at', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'zdf.de' => [ 'ZDF', 'hd.zdf.de, quality', 'de', 0, undef, undef, 'http://www.zdf.de/', 'TV'],
       },
