german config: push results of comparison to the website (and strip hdtv flag from sd channels)

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -187,8 +187,8 @@
     Combiner =>
     {
       Type => 'Combiner',
-      # same as Exporters->Xmltv->MaxDays
-      MaxDays => 3*7+1,
+      # same as Exporters->Xmltv->MaxDays + 1
+      MaxDays => 3*7+1+1,
       Channels => {
 	'arteeinsextra.ard.de' => [ 'arte/EinsExtra', '', 'de', 0, undef, undef, undef, 'TV'],
 	'neokika.zdfmobil.de' => [ 'neo/KiKa', '', 'de', 0, undef, undef, undef, 'TV'],
@@ -198,14 +198,14 @@
     Downconverter =>
     {
       Type => 'Downconverter',
-      # same as Exporters->Xmltv->MaxDays
-      MaxDays => 3*7+1,
+      # same as Exporters->Xmltv->MaxDays + 1
+      MaxDays => 3*7+1+1,
       Channels => {
 	'arte.de' => [ 'ARTE', 'hd.arte.de, quality', 'de', 0, undef, undef, 'http://www.arte.de', 'TV'],
 	'daserste.de' => [ 'Das Erste', 'hd.daserste.de, quality', 'de', 0, undef, undef, 'http://www.daserste.de', 'TV'],
 	'einsfestival.ard.de' => [ 'Einsfestival', 'hd.einsfestival.ard.de, quality', 'de', 0, undef, undef, 'http://www.einsfestival.de/', 'TV'],
-	'orf1.orf.at' => [ 'ORFeins', 'hd.orf1.orf.at', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
-	'orf2.orf.at' => [ 'ORF 2', 'hd.orf2.orf.at', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+	'orf1.orf.at' => [ 'ORFeins', 'hd.orf1.orf.at, quality', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+	'orf2.orf.at' => [ 'ORF 2', 'hd.orf2.orf.at, quality', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'zdf.de' => [ 'ZDF', 'hd.zdf.de, quality', 'de', 0, undef, undef, 'http://www.zdf.de/', 'TV'],
       },
     },
