Tmdb: first working draft of augmenter for themoviedb.org

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -275,6 +275,8 @@
     Tmdb =>
     {
       Type => 'Tmdb',
+      Language => 'de',              # main language used for initializing and languagestrings
+      ApiKey => 'see override.conf', # verify if it's per software or per installation
     },
 
     Fixups =>
