Tmdb: tighten up matching to force a match by title and year
Force the country to germany as the default for "de" is "de-US" instead of "de-DE".
Add reference to TMDb and TTVDB to the german landing page. (not using any logo as that would be more prominent than our nonexistent logo)

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -275,7 +275,7 @@
     Tmdb =>
     {
       Type => 'Tmdb',
-      Language => 'de',              # main language used for initializing and languagestrings
+      Language => 'de-DE',           # main language/region used for initializing and languagestrings
       ApiKey => 'see override.conf', # verify if it's per software or per installation
     },
 
