german config: disable SRF for now

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -94,6 +94,7 @@
 	'hd.orf1.orf.at' => [ 'ORFeins HD', 'ORF1', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'hd.orf2.orf.at' => [ 'ORF 2 HD', 'ORF2', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'sportplus.orf.at' => [ 'ORF Sport Plus', 'ORFS', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+	'3sat.at' => [ '3sat (ORF.pm als Programmquelle statt DreiSat.pm)', '3sat', 'de', 0, undef, undef, 'http://3sat.at/', 'TV' ],
       },
     },
 
@@ -120,7 +121,7 @@
 	'sf1.srf.ch' => [ 'SF 1', '1', 'de', 0, undef, undef, 'http://sf.tv/', 'TV' ],
 	'sf2.srf.ch' => [ 'SF zwei', '2', 'de', 0, undef, undef, 'http://sf.tv/', 'TV' ],
 	'sfi.srf.ch' => [ 'SF info', '3', 'de', 0, undef, undef, 'http://sf.tv/', 'TV' ],
-        # skipping 3sat
+        # skipping 3sat, it appears to be just the swiss contribution to 3sat, the rest is missing
 	'hdsuisse.sf.tv' => [ 'HD suisse', '5', 'de', 0, undef, undef, 'http://www.allgemein.sf.tv/hdsuisse/Nachrichten/Uebersicht', 'TV' ],
 	'drs1.ch' => [ 'DRS 1', '6', 'de', 0, undef, undef, 'http://drs1.ch/', 'RADIO' ],
 	'drs2.ch' => [ 'DRS 2', '7', 'de', 0, undef, undef, 'http://drs2.ch/', 'RADIO' ],
