Tmdb: don't copy copyrightable data in german config until I've checked the quality of rights clearance

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -236,7 +236,9 @@
       },
     },
 
-    # just for testing and bugfixing
+    #########################################################################################
+    # from here on everything is just for testing and bugfixing
+    #########################################################################################
     Viasat =>
     {
       Type => 'Viasat',
@@ -278,6 +280,7 @@
       Type => 'Tmdb',
       Language => 'de-DE',           # main language/region used for initializing and languagestrings
       ApiKey => 'see override.conf', # verify if it's per software or per installation
+      OnlyAugmentFacts => 1,         # don't bill me for using texts that sound like yours (when it's not clear who has what rights, you included!)
     },
 
     Fixups =>
