ZDFinfo: switches from email to web delivery
TODO refactor the ZDF grabbers into on processor and on grabber for mail / web delivery

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -179,6 +179,15 @@
     {
       Type => 'ZDFinfo',
       Channels => {
+#	'infokanal.zdf.de' => [ 'ZDFinfokanal', '', 'de', 0, undef, undef, 'http://infokanal.zdf.de/', 'TV'],
+      },
+    },
+
+    ZDFinfo_http =>
+    {
+      Type => 'ZDFinfo_http',
+      MaxWeeks => 5, # 6 actually, need to fix a bug with the sa-fr week
+      Channels => {
 	'infokanal.zdf.de' => [ 'ZDFinfokanal', '', 'de', 0, undef, undef, 'http://infokanal.zdf.de/', 'TV'],
       },
     },
