add draft Importer for MTV Networks Germany using the StruPPI format

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -87,6 +87,18 @@
       },
     },
 
+    MTVde =>
+    {
+      Type => 'MTVde',
+      MaxWeeks => 6,
+      Channels => {
+	'comedycentral.de' => [ 'Comedy Central Germany', '16', 'de', 0, undef, undef, 'http://comedycentral.de/', 'TV' ],
+	'at.nick.de' => [ 'Nickelodeon Austria', '33', 'de', 0, undef, undef, 'http://www.nick.de/', 'TV' ],
+	'nick.de' => [ 'Nickelodeon Germany', '17', 'de', 0, undef, undef, 'http://www.nick.de/', 'TV' ],
+      },
+      HaveVGMediaLicense => 'no',
+    },
+
     ORF =>
     {
       Type => 'ORF_xml',
@@ -219,6 +231,7 @@
       Channels => {
 	'arteeinsextra.ard.de' => [ 'arte/EinsExtra', '', 'de', 0, undef, undef, undef, 'TV'],
 	'neokika.zdfmobil.de' => [ 'neo/KiKa', '', 'de', 0, undef, undef, undef, 'TV'],
+        'nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Germany)', '', 'de', 0, undef, undef, undef, 'TV'],
       },
     },
 
@@ -253,7 +266,7 @@
       Type => 'Timeshifter',
       MaxDays => 3,
       Channels => {
-        'plus1.action.tv1000.viasat.hr' => [ 'timeshifted TV1000 Action hr', 'action.tv1000.viasat.hr, 60', 'hr', 0, undef, undef, undef, 'TEST'],
+#        'plus1.action.tv1000.viasat.hr' => [ 'timeshifted TV1000 Action hr', 'action.tv1000.viasat.hr, 60', 'hr', 0, undef, undef, undef, 'TEST'],
       },
     },
   },
