shuffle german MTV channels around

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -92,8 +92,10 @@
       Type => 'MTVde',
       MaxWeeks => 6,
       Channels => {
+	'comedycentral.ch' => [ 'Comedy Central Switzerland', '3', 'de', 0, undef, undef, 'http://comedycentral.de/', 'TV' ],
 	'comedycentral.de' => [ 'Comedy Central Germany', '16', 'de', 0, undef, undef, 'http://comedycentral.de/', 'TV' ],
-	'at.nick.de' => [ 'Nickelodeon Austria', '33', 'de', 0, undef, undef, 'http://www.nick.de/', 'TV' ],
+#	'at.nick.de' => [ 'Nickelodeon Austria', '33', 'de', 0, undef, undef, 'http://www.nick.de/', 'TV' ],
+	'nick.ch' => [ 'Nickelodeon Switzerland', '25', 'de', 0, undef, undef, 'http://www.nick.ch/', 'TV' ],
 	'nick.de' => [ 'Nickelodeon Germany', '17', 'de', 0, undef, undef, 'http://www.nick.de/', 'TV' ],
       },
       HaveVGMediaLicense => 'no',
@@ -232,6 +234,7 @@
 	'arteeinsextra.ard.de' => [ 'arte/EinsExtra', '', 'de', 0, undef, undef, undef, 'TV'],
 	'neokika.zdfmobil.de' => [ 'neo/KiKa', '', 'de', 0, undef, undef, undef, 'TV'],
         'nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Germany)', '', 'de', 0, undef, undef, undef, 'TV'],
+        'ch.nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Switzerland)', '', 'de', 0, undef, undef, undef, 'TV'],
       },
     },
 
