--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -24,6 +24,23 @@
  
   Importers =>
   {
+    AFN =>
+    {
+      Type => 'AFN',
+      Channels => {
+	'family.myafn.net'          => [ 'AFN|family',         'AFN|family',         'en', 0, undef, undef, 'http://myafn.dodmedia.osd.mil/', 'TV' ],
+	'movie.myafn.net'           => [ 'AFN|movie',          'AFN|movie',          'en', 0, undef, undef, 'http://myafn.dodmedia.osd.mil/', 'TV' ],
+	'news.myafn.net'            => [ 'AFN|news',           'AFN|news',           'en', 0, undef, undef, 'http://myafn.dodmedia.osd.mil/', 'TV' ],
+	'atlantic.prime.myafn.net'  => [ 'AFN|prime Atlantic', 'AFN|prime Atlantic', 'en', 0, undef, undef, 'http://myafn.dodmedia.osd.mil/', 'TV' ],
+	'freedom.prime.myafn.net'   => [ 'AFN|prime Freedom',  'AFN|prime Freedom',  'en', 0, undef, undef, 'http://myafn.dodmedia.osd.mil/', 'TV' ],
+	'pacific.prime.myafn.net'   => [ 'AFN|prime Pacific',  'AFN|prime Pacific',  'en', 0, undef, undef, 'http://myafn.dodmedia.osd.mil/', 'TV' ],
+	'spectrum.myafn.net'        => [ 'AFN|spectrum',       'AFN|spectrum',       'en', 0, undef, undef, 'http://myafn.dodmedia.osd.mil/', 'TV' ],
+	'sports.myafn.net'          => [ 'AFN|sports',         'AFN|sports',         'en', 0, undef, undef, 'http://myafn.dodmedia.osd.mil/', 'TV' ],
+	'xtra.myafn.net'            => [ 'AFN|xtra',           'AFN|xtra',           'en', 0, undef, undef, 'http://myafn.dodmedia.osd.mil/', 'TV' ],
+	'pentagonchannel.myafn.net' => [ 'Pentagon Channel',   'Pentagon Channel',   'en', 0, undef, undef, 'http://myafn.dodmedia.osd.mil/', 'TV' ],
+      },
+    },
+
     Arte_http =>
     {
       Type => 'Arte_http',
@@ -32,6 +49,7 @@
       },
       MaxWeeks => 4,
     },
+
     DasErsteDE =>
     {
       Type => 'DasErsteDE',
@@ -296,6 +314,21 @@
     {
       Type => 'Fixups',
     },
+
+    # for AFN
+    TvdbEn => # might want multiple instances of the same type to handle multiple language setups
+    {
+      Type => 'Tvdb',
+      Language => 'en',              # main language used for initializing and languagestrings
+      ApiKey => 'see override.conf', # verify if it's per software or per installation
+    },
+
+    TmdbEn =>
+    {
+      Type => 'Tmdb',
+      Language => 'en-US',           # main language/region used for initializing and languagestrings
+      ApiKey => 'see override.conf', # verify if it's per software or per installation
+      OnlyAugmentFacts => 1,         # don't bill me for using texts that sound like yours (when it's not clear who has what rights, you included!)
   },
 
   Exporters =>
