Unbreak Infomedia Importer after the old site finally got shut down

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -97,6 +97,14 @@
       },
     },
 
+    Infomedia => {
+      Type => 'Infomedia',
+      Channels => {
+        'english.aljazeera.net' =>
+            [ 'Al Jazeera (English)', 'AJI', 'en', 0, '', '', 'http://www.aljazeera.com/', 'TV' ],
+      },
+    },
+
     KiKaDE =>
     {
       Type => 'KiKaDE',
